examples/test/testpolicy1476.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1476
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key45: value24
      key20: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value38
          key21: value47
          key18: value12
      podSelector:
        matchLabels:
          key40: value36
          key20: value17
          key37: value14
